--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Vaibhav Hariramani, A tech Blogger</title>
+<title>Sophie Yang, A tech Blogger</title>
 </head>
 <body>
 <nav>
    
 <div >
-    <h1>Hi there, I'm Vaibhav Hariramani!</h1>
+    <h1>Hi there, I'm Sophie Yang!</h1>
     <p> <a href="/about">Read more about my life...</a></p>
 </div>
 <footer>
 <ul>
- <li><a href="mailto:vaibhav.hariramani01@gmail.com">email</a></li>
- <li><a href="https://github.com/vaibhavhariaramani">Github</a></li>
+ <li><a href="mailto:sophieyang@gmail.com">email</a></li>
+ <li><a href="https://github.com/sophie6789">Github</a></li>
 </ul>
 </footer>
 </body>
